# shopify-admin-api-rust

./: .gitignore  Cargo.toml  README.md
graphql-port/: Cargo.toml  build_errors.txt  err.json
graphql-port/src/: client.rs  error.rs  graphql.rs  lib.rs  models.rs  session.rs
rust-port/docs/: RESOURCE_RELATIONSHIPS.txt  abandoned_checkout.txt  access_scope.txt  apple_pay_certificate.txt  application_charge.txt  application_credit.txt  article.txt  asset.txt  assigned_fulfillment_order.txt  balance.txt  blog.txt  cancellation_request.txt  carrier_service.txt  checkout.txt  collect.txt  collection.txt  collection_listing.txt  comment.txt  country.txt  currency.txt  custom_collection.txt  customer.txt  deprecated_api_call.txt  discount_code.txt  dispute.txt  dispute_evidence.txt  dispute_file_upload.txt  draft_order.txt  event.txt  fulfillment.txt  fulfillment_event.txt  fulfillment_order.txt  fulfillment_request.txt  fulfillment_service.txt  gift_card.txt  gift_card_adjustment.txt  image.txt  inventory_item.txt  inventory_level.txt  location.txt  (+33 more)
rust-port/src/: base.rs  client.rs  error.rs  main.rs  session.rs
src/: lib.rs
src/resources/: access_scope.rs  application_charge.rs  assigned_fulfillment_order.rs  checkout.rs  comment.rs  custom_collection.rs  deprecated_api_call.rs  dispute.rs  dispute_file_upload.rs  draft_order.rs  gift_card_adjustment.rs  inventory_level.rs  location.rs  mobile_platform_application.rs  order.rs  order_risk.rs  page.rs  payment.rs  payment_gateway.rs  payout.rs  price_rule.rs  product_listing.rs  product_resource_feedback.rs  province.rs  (+9 more)
(+40 files in other folders)
